# krust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bacon.toml
src/: constants.rs  headers.rs  lib.rs  main.rs  modules.rs  request.rs  response.rs  serde_kafka.rs  test_helpers.rs
src/modules/: describe_topic_partitions.rs  metadata_log_file.rs
src/modules/api_versions/: handler.rs  payloads.rs
src/modules/describe_topic_partitions/: handler.rs  payloads.rs
src/modules/metadata_log_file/: load.rs  payloads.rs
src/request/: body.rs  header.rs
src/response/: body.rs  header.rs
src/serde_kafka/: compact_string.rs  de.rs  error.rs  ser.rs  simple_seq.rs  uuid_as_bytes.rs
tests/: api_versions_test.rs  common.rs  describe_topic_partitions_test.rs  serve_test.rs
