[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.87"

[features]
test-helpers = []

[dependencies]
bytes = "1.10.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde"] }

[dev-dependencies]
codecrafters-kafka = { path = ".", features = ["test-helpers"] }
serde_test = "1.0.177"
